syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank {}

message Person {
    string id = 1;
    string name = 2;
    int32 year = 3;
}

message Profession {
    string id = 1;
    string description = 2;
}

message CreatePersonRequest {
    string name = 1;
    int32 year = 2;
}

message PersonResponse {
    Person person = 1;
}

message CreateProfessionRequest {
    string description = 1;
}

message ProfessionResponse {
    Profession profession = 1;
}

message PersonList {
    repeated Person people = 1;
}

message ProfessionList {
    repeated Profession professions = 1;
}

message PersonGetRequest {
    string id = 1;
}

message ProfessionGetRequest {
    string id = 1;
}

service PersonService {
    rpc CreatePerson(CreatePersonRequest) returns (Person) {}
    rpc CreatePersonStream(stream CreatePersonRequest) returns (PersonList) {}
    rpc CreatePersonStreamBidirectional(stream CreatePersonRequest) returns (stream Person) {}
    rpc ListPerson(blank) returns (PersonList) {}
    rpc GetPerson(PersonGetRequest) returns (Person) {}
}

service ProfessionService {
    rpc CreateProfession(CreateProfessionRequest) returns (Profession) {}
    rpc CreateProfessionStream(stream CreateProfessionRequest) returns (ProfessionList) {}
    rpc CreateProfessionStreamBidirectional(stream CreateProfessionRequest) returns (stream Profession) {}
    rpc ListProfession(blank) returns (ProfessionList) {}
    rpc GetProfession(ProfessionGetRequest) returns (Profession) {}
}